[tool.poetry]
name = "pyinst"
version = "0.0.2"
description = "PyVISA仪器控制库，支持Keysight和Rohde&Schwarz仪器"
authors = ["zhangxp93 <937097345@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyvisa = "^1.14.1"
colorlog = "^6.9.0"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"