[project]
name = "pyinsts"
version = "0.0.3"
description = "PyVISA仪器控制库，支持Keysight和Rohde&Schwarz仪器"
authors = [
    { name = "zhangxp93", email = "937097345@qq.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.9.0",
    "pyvisa>=1.14.1",
    "pyyaml>=6.0.3",
    "versioningit>=3.3.0",
]


[tool.uv.workspace]
members = [
    "test_app",
]
